<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="180dp"
    android:gravity="center_horizontal"
    android:background="@color/color_transparent"
    tools:backgroundTint="@android:color/transparent"
    tools:context="com.micronet.bridgetechbusoccupancy.fragment.OdometerReadingFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/fragment_background"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingTop="60dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1">
            <TextView
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:text="@string/current_odometer_reading"/>
            <EditText
                android:gravity="center_horizontal"
                android:id="@+id/logout_odometer_reading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:hint="@string/odometer_reading"
                android:inputType="number"
                android:textSize="@dimen/text_size" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/logout_odometer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_background"
                android:text="@string/logout"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
