<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.micronet.bridgetechbusoccupancy.MainActivity">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/occupancy" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/occupancy"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white"
                    android:gravity="start"/>
                <TextView
                    android:id="@+id/occupancy_view"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25pt"
                    android:textColor="@color/white"
                    android:fontFamily="serif-monospace"
                    android:background="@color/black"
                    android:gravity="end"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bus_number"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/bus_number_view"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25pt"
                    android:textColor="@color/white"
                    android:fontFamily="serif-monospace"
                    android:background="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ops_number"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/ops_number_view"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25pt"
                    android:textColor="@color/white"
                    android:fontFamily="serif-monospace"
                    android:background="@color/black"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:id="@+id/clock_in_status"
            android:textSize="@dimen/text_size"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/break_select"
            android:orientation="vertical">
            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/break_type"
                android:textSize="@dimen/text_size"
                android:textColor="@color/white"/>
            <Spinner
                android:id="@+id/break_select_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/break_types"
                android:textSize="@dimen/text_size"
                android:background="@drawable/rounded_border"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
        <!--Encapsulating the button in a LinearLayout is needed so that the button is not stretched vertically.-->
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5">
            <Button
                android:id="@+id/clock_in_status_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resume_route"
                android:textSize="@dimen/button_text_size"
                android:background="@drawable/btn_background"/>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pc_reset"
                android:textSize="@dimen/button_text_size"
                android:background="@drawable/btn_background"
                android:onClick="onClickPcReset"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/logout_layout"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="@dimen/button_text_size"
                android:background="@drawable/btn_background"
                android:onClick="onClickLogout"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
