<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="160dp"
    tools:context=".fragment.PcResetFragment"
    android:background="@color/color_transparent"
    android:gravity="center_horizontal"
    tools:backgroundTint="@android:color/transparent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/fragment_background"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"/>-->
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/bus_number"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"/>
            <EditText
                android:hint="@string/bus_number"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/pc_reset_bus_number"
                android:background="@drawable/rounded_border"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/ops_number"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/pc_reset_ops"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/ops_number"
                android:background="@drawable/rounded_border"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/current_occupancy"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/current_occupancy"
                android:id="@+id/pc_reset_occupancy"
                android:background="@drawable/rounded_border"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/submit_pc_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_background"
                android:text="@string/submit_pc_reset"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>
        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"/>-->
    </LinearLayout>
</RelativeLayout>